Capturar entradas do usuário através do campo Bill

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div class="input-form">
         
-        <div class="bill">
+        <div class="bill-form">
           <header>
             <h3>Conta</h3>
           </header>
@@ -30,12 +30,12 @@
           </header>
           <div class="content">
             <ul>
-              <li><button id="5">5%</button></li>
-              <li><button id="10">10%</button></li>
-              <li><button id="15">15%</button></li>
-              <li><button id="25">25%</button></li>
-              <li><button id="50">50%</button></li>
-              <li><button id="custom">Digitar</button></li>
+              <li><button id="5" onclick="selectTip(this.id)">5%</button></li>
+              <li><button id="10" onclick="selectTip(this.id)">10%</button></li>
+              <li><button id="15" onclick="selectTip(this.id)">15%</button></li>
+              <li><button id="25" onclick="selectTip(this.id)">25%</button></li>
+              <li><button id="50" onclick="selectTip(this.id)">50%</button></li>
+              <li><input id="custom"></button></li>
             </ul>
           </div>
         </div>
