--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </header>
 
           <div class="content">
-            <h2 id="tip-by-person">R$ 0.00</h2>
+            <h2 id="tip-by-person">$ 0.00</h2>
           </div>
         </div>
 
@@ -79,13 +79,13 @@
             <h4>/ person</h4>
           </header>
           <div class="content">
-            <h2 id="total-by-person">R$ 0.00</h2>
+            <h2 id="total-by-person">$ 0.00</h2>
           </div>
         </div>
 
         <div class="calc-reset">
           <button id="calculate" onclick="calculateAmount()">Calc</button>
-          <button id="reset">Limpar</button>
+          <button id="reset" onclick="resetForm()">Reset</button>
         </div>
 
       </div>
