Acrescenta tip Custom e seleciona botões OU custom

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
               <li><button class="billButton" id="15">15%</button></li>
               <li><button class="billButton" id="25">25%</button></li>
               <li><button class="billButton" id="50">50%</button></li>
+              <li><input type="number" class="tipCustom" placeholder="Custom"></li>
+              <!--
               <li><button class="billButton" id="100">100%</button></li>
+              -->
 
               <!--
               <li><button id="5" onclick="getTip(this.id)">5%</button></li>
