Valida fatura e gorjeta ao informar o número de pessoas

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
               <!--
               <li><button class="billButton" id="100">100%</button></li>
               -->
-
               <!--
               <li><button id="5" onclick="getTip(this.id)">5%</button></li>
               <li><button id="10" onclick="getTip(this.id)">10%</button></li>
@@ -56,9 +55,9 @@
               <li><button id="50" onclick="getTip(this.id)">50%</button></li>
               <li><button id="100" onclick="getTip(this.id)">100%</button></li>
               -->
-
             </ul>
           </div>
+          <p id="tip-validation"></p>
           <h4 style="color:green" id="result"></h4>  
         </div>
 
